# numelace

./: .typos.toml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  index.html
.github/: dependabot.yml
.github/workflows/: markdownlint.yaml  pages.yaml  rust.yaml  typos.yaml
assets/: numelace-worker-bootstrap.js  sw.js
crates/numelace-app/: Cargo.toml  build.rs
crates/numelace-app/src/: action.rs  action_handler.rs  app.rs  flow.rs  flow_executor.rs  game_factory.rs  history.rs  lib.rs  main.rs  state.rs  undo_redo_stack.rs  version.rs  view_model_builder.rs  worker_api.rs
crates/numelace-app/src/action/: flows.rs  handler.rs  mod.rs
crates/numelace-app/src/action/handler/: flows.rs  mod.rs
crates/numelace-app/src/action_handler/: flows.rs
crates/numelace-app/src/async_work/: mod.rs  new_game_dto.rs  solvability_dto.rs  work_actions.rs  work_flow.rs
crates/numelace-app/src/async_work/platform/: mod.rs  native.rs  wasm.rs
crates/numelace-app/src/flow/: executor.rs  helpers.rs  mod.rs
crates/numelace-app/src/flow/tasks/: hint.rs  mod.rs  new_game.rs  solvability.rs
crates/numelace-app/src/persistence/: dto.rs  mod.rs  storage.rs
crates/numelace-app/src/state/: app_state.rs  history.rs  mod.rs  new_game_options.rs  settings.rs  ui_state.rs
crates/numelace-app/src/ui/: dialogs.rs  game_screen.rs  grid.rs  grid_theme.rs  icon.rs  input.rs  keypad.rs  layout.rs  mod.rs  settings.rs  sidebar.rs  spinner.rs  status_line.rs  toolbar.rs
crates/numelace-app/src/ui/modal/: dialogs.rs  mod.rs  new_game_options.rs  settings.rs
crates/numelace-app/src/worker/: api.rs  generated_puzzle_dto.rs  mod.rs  solvability_dto.rs
crates/numelace-app/src/worker/platform/: mod.rs  wasm.rs
crates/numelace-app/src/worker/tasks/: generate_puzzle.rs  mod.rs  solvability.rs
crates/numelace-core/: Cargo.toml
crates/numelace-core/src/: candidate_grid.rs  digit.rs  digit_grid.rs  house.rs  lib.rs  position.rs
crates/numelace-core/src/containers/: aliases.rs  array_81.rs  array_9.rs  bit_set_81.rs  bit_set_9.rs  mod.rs
crates/numelace-core/src/index/: index_81.rs  index_9.rs  mod.rs
crates/numelace-game/: Cargo.toml
crates/numelace-game/src/: cell_state.rs  error.rs  game.rs  input.rs  lib.rs
crates/numelace-generator/: Cargo.toml
crates/numelace-generator/benches/: generator.rs
crates/numelace-generator/examples/: generate_puzzle.rs
crates/numelace-generator/src/: lib.rs
crates/numelace-solver/: Cargo.toml
crates/numelace-solver/benches/: backtrack.rs  solver.rs  techniques.rs
crates/numelace-solver/examples/: solve_puzzle.rs
crates/numelace-solver/src/: axis.rs  backtrack.rs  backtrack_solver.rs  error.rs  lib.rs  technique_grid.rs  technique_solver.rs  technique_step.rs  testing.rs
crates/numelace-solver/src/technique/: hidden_pair.rs  hidden_quad.rs  hidden_single.rs  hidden_triple.rs  jellyfish.rs  locked_candidates.rs  mod.rs  naked_pair.rs  naked_quad.rs  naked_single.rs  naked_triple.rs  remote_pair.rs  skyscraper.rs  swordfish.rs  traits.rs  two_string_kite.rs  wxyz_wing.rs  x_chain.rs  x_wing.rs  xy_chain.rs  xyz_wing.rs  y_wing.rs
crates/sudoku-app/: Cargo.toml
crates/sudoku-app/src/: app.rs  main.rs
crates/sudoku-app/src/ui/: game_screen.rs  grid.rs  input.rs  keypad.rs  mod.rs  sidebar.rs
crates/sudoku-core/: Cargo.toml
crates/sudoku-core/src/: bit_set_81.rs  bit_set_9.rs  candidate_board.rs  candidate_grid.rs  digit.rs  digit_candidates.rs  digit_grid.rs  index_81.rs  index_9.rs  lib.rs  number_set.rs  position.rs
crates/sudoku-core/src/containers/: array_81.rs  array_9.rs  bit_set_81.rs  bit_set_9.rs  mod.rs
crates/sudoku-core/src/index/: index_81.rs  index_9.rs  mod.rs
crates/sudoku-game/: Cargo.toml
crates/sudoku-game/src/: lib.rs
crates/sudoku-generator/: Cargo.toml
crates/sudoku-generator/benches/: generator.rs
crates/sudoku-generator/examples/: generate_puzzle.rs
crates/sudoku-generator/src/: lib.rs
crates/sudoku-solver/: Cargo.toml
crates/sudoku-solver/benches/: backtrack.rs  solver.rs
crates/sudoku-solver/src/: backtrack_solver.rs  error.rs  lib.rs  technique_solver.rs  testing.rs
crates/sudoku-solver/src/technique/: hidden_single.rs  mod.rs  naked_single.rs
docs/: ARCHITECTURE.md  BACKLOG.md  DESIGN_LOG.md  DOCUMENTATION_GUIDE.md  TESTING.md  TODO.md  WORKFLOW.md
docs/design/: solver-design.md  sudoku-app.md
docs/review/review-2026-01-21/: README.md  action.md  response.md
scripts/: generate_icon_assets  generate_icon_svg
template/.github/workflows/: rust.yml  typos.yml
