[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
description = "A multi-platform Sudoku application with puzzle generation, solving, and interactive features."
readme = "README.md"
repository = "https://github.com/gifnksm/sudoku"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
eframe = "0.33.3"
proptest = "1.9"

sudoku-core = { path = "crates/sudoku-core" }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
