[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
description = "Numelace is a multi-platform number-place (Sudoku) application with puzzle generation, solving, and interactive features."
readme = "README.md"
repository = "https://github.com/gifnksm/numelace"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
better-panic = "0.3.0"
bitflags = "2.11.0"
criterion = "0.8.2"
derive_more = "2.1.1"
eframe = "0.33.3"
egui_extras = "0.33.3"
env_logger = "0.11.9"
getrandom = "0.3.4"
js-sys = "0.3.85"
log = "0.4.29"
proptest = "1.10"
rand = "0.9.2"
rand_pcg = "0.9.0"
serde = "1.0.228"
serde-wasm-bindgen = "0.6.5"
vergen-gitcl = "9.1.0"
wasm-bindgen = "0.2.108"
wasm-bindgen-futures = "0.4.58"
futures-channel = "0.3.31"
portable-atomic = "1.13.1"
web-sys = "0.3.85"

numelace-core = { path = "crates/numelace-core" }
numelace-game = { path = "crates/numelace-game" }
numelace-generator = { path = "crates/numelace-generator" }
numelace-solver = { path = "crates/numelace-solver" }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }

[workspace.lints.rust]
missing_docs = "warn"

[profile.release]
opt-level = 3
lto = "fat"
