[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
description = "Numelace is a multi-platform number-place (Sudoku) application with puzzle generation, solving, and interactive features."
readme = "README.md"
repository = "https://github.com/gifnksm/numelace"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
better-panic = "0.3.0"
bitflags = "2.11.0"
clap = "4.6.0"
criterion = "0.8.2"
derive_more = "2.1.1"
eframe = "0.34.1"
egui_extras = "0.34.1"
env_logger = "0.11.10"
getrandom = "0.4.2"
js-sys = "0.3.94"
log = "0.4.29"
proptest = "1.11"
rand = "0.10.0"
rand_pcg = "0.10.1"
rayon = "1.11.0"
serde = "1.0.228"
serde-wasm-bindgen = "0.6.5"
vergen-gitcl = "9.1.0"
wasm-bindgen = "0.2.117"
wasm-bindgen-futures = "0.4.67"
futures-channel = "0.3.32"
portable-atomic = "1.13.1"
sha2 = "0.11.0"
tinyvec = "1.11.0"
web-sys = "0.3.94"

numelace-core = { path = "crates/numelace-core" }
numelace-game = { path = "crates/numelace-game" }
numelace-generator = { path = "crates/numelace-generator" }
numelace-solver = { path = "crates/numelace-solver" }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }

[workspace.lints.rust]
missing_docs = "warn"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
