[package]
name = "numelace-app"
default-run = "numelace"
version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "numelace"
path = "src/bin/numelace.rs"

[[bin]]
name = "numelace-worker"
path = "src/bin/numelace-worker.rs"

[dependencies]
bitflags.workspace = true
derive_more = { workspace = true, features = ["error", "display", "from"] }
eframe = { workspace = true, features = ["persistence"] }
egui_extras.workspace = true
futures-channel.workspace = true
portable-atomic.workspace = true
log.workspace = true
numelace-core.workspace = true
numelace-game.workspace = true
numelace-generator.workspace = true
numelace-solver.workspace = true
serde = { workspace = true, features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
better-panic.workspace = true
env_logger.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { workspace = true, features = ["wasm_js"] }
js-sys.workspace = true
serde-wasm-bindgen.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys = { workspace = true, features = [
    "DedicatedWorkerGlobalScope",
    "Document",
    "HtmlCanvasElement",
    "MessageEvent",
    "Url",
    "Window",
    "Worker",
] }

[lints]
workspace = true
