[package]
name = "numelace-solver"
version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
derive_more = { workspace = true, features = ["display", "error", "from"] }
numelace-core.workspace = true

[lints]
workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "backtrack"
harness = false

[[bench]]
name = "solver"
harness = false
