[package]
name = "numelace-solver"
version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
derive_more = { workspace = true, features = ["display", "error", "from", "is_variant"] }
numelace-core.workspace = true
tinyvec = { workspace = true, features = ["latest_stable_rust"] }

[lints]
workspace = true

[dev-dependencies]
clap = { workspace = true, features = ["derive"] }
criterion.workspace = true

[[bench]]
name = "solver"
harness = false

[[bench]]
name = "techniques"
harness = false
