[package]
name = "sudoku-app"
version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "sudoku"
path = "src/main.rs"

[dependencies]
eframe.workspace = true
sudoku-core.workspace = true
sudoku-game.workspace = true
sudoku-generator.workspace = true
sudoku-solver.workspace = true

[lints]
workspace = true
