[package]
name = "sudoku-game"
version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
derive_more = { workspace = true, features = ["display", "error", "is_variant"] }
sudoku-core.workspace = true
sudoku-generator.workspace = true

[dev-dependencies]
sudoku-solver.workspace = true

[lints]
workspace = true
